# ddg_multi_robot_planner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/ddg_multi_robot_planner/: CBS.h  Instance.h  multi_robot_planner.hpp
launch/: multi_robot_planner.launch.py
maps/: planned-paths-downsampled.txt  planned-paths.txt  svd_demo-scen.txt  svddemo-14-44-2.map  workshop0-downsampled-map-metadata.txt  workshop0-downsampled-map.txt  workshop0-downsampled-scen.txt  workshop0-downsampled_map.txt  workshop0-scen.txt
maps/downsampled-map/: svd_demo-downsampled.map  svd_demo-downsampled.yaml
maps/downsampled-map/Oct-16/: Oct-16-downsampled.map  Oct-16-downsampled.yaml  Oct-16.pgm  Oct-16.yaml
maps/downsampled-map/res20/: svd_demo-downsampled.map  svd_demo-downsampled.yaml  svd_demo.pgm  svd_demo.yaml
scripts/: costmap_downsampler.py  costmap_downsampler_v2.py  svd_demo-parsed-map.txt  transform_visualization.py  visualize_intermediate_map.py  visualize_planned_path.py
src/: CBS.cpp  Instance.cpp  SpaceTimeAStar.cpp  driver.cpp  multi_robot_planner.cpp
